[package]
name = "rust_jwks"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.119"
reqwest = { version = "0.12.5", features = ["json"] }
jsonwebtoken = "9.3.0"
dotenv = "0.15.0"
utoipa = { version = "4.2.3", features = ["chrono", "axum_extras"] }

[dev-dependencies]
http-body-util = "0.1.1"
mockito = "1.4.0"
tower = "0.4.13"
